[gd_scene format=3 uid="uid://cwb1dudugvnvr"]

[ext_resource type="PackedScene" uid="uid://6kvy1x8h2euv" path="res://scenes/player/player.tscn" id="1_oymhc"]
[ext_resource type="Script" uid="uid://1rk7k71daap8" path="res://scenes/main/main_theme.gd" id="1_se2ci"]
[ext_resource type="PackedScene" uid="uid://b0kbvitc6ecar" path="res://scenes/main/environment.tscn" id="3_bsg0c"]
[ext_resource type="PackedScene" uid="uid://bq8hlaiwpcae7" path="res://scenes/music_player/music_player.tscn" id="4_1hmtj"]
[ext_resource type="PackedScene" uid="uid://bvsvkh8p2iulo" path="res://scenes/bullet/Bullets.tscn" id="4_y7la5"]
[ext_resource type="PackedScene" uid="uid://us6xv1s475p3" path="res://scenes/hud/main_hud.tscn" id="5_odjv6"]
[ext_resource type="PackedScene" uid="uid://1uabh6xjrcse" path="res://scenes/hud/die_hud.tscn" id="5_y6w0x"]
[ext_resource type="Texture2D" uid="uid://b662auvwtfrys" path="res://img/bg/bg_back_2.png" id="8_y7la5"]
[ext_resource type="Texture2D" uid="uid://bn1akr02kxjc1" path="res://img/bg/bg_front_2.png" id="9_pjgi8"]

[node name="MainTheme" type="Node2D" unique_id=1795006946]
script = ExtResource("1_se2ci")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1874647195]
position = Vector2(300, 0)

[node name="Player" parent="." unique_id=1457732073 instance=ExtResource("1_oymhc")]
position = Vector2(300, 0)

[node name="Environment" parent="." unique_id=200072663 instance=ExtResource("3_bsg0c")]

[node name="Bullets" parent="." unique_id=209300185 instance=ExtResource("4_y7la5")]

[node name="MusicPlayer" parent="." unique_id=1375999330 instance=ExtResource("4_1hmtj")]

[node name="UI" type="CanvasLayer" parent="." unique_id=977107135]
layer = 100

[node name="MainHud" parent="UI" unique_id=1556759344 instance=ExtResource("5_odjv6")]

[node name="DieHud" parent="UI" unique_id=576484789 instance=ExtResource("5_y6w0x")]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1785852739]
layer = -1

[node name="ParallaxBackground" type="Parallax2D" parent="CanvasLayer" unique_id=836826674]
repeat_size = Vector2(0, 1360)
autoscroll = Vector2(0, -500)
repeat_times = 3

[node name="BgBacker" type="Sprite2D" parent="CanvasLayer/ParallaxBackground" unique_id=456178639]
texture = ExtResource("8_y7la5")
centered = false

[node name="BgFronter" type="Sprite2D" parent="CanvasLayer" unique_id=1374068461]
texture = ExtResource("9_pjgi8")
centered = false
